fix bug cursor & overflow

--- a/src/app/heroes/heroes.component.scss
+++ b/src/app/heroes/heroes.component.scss
@@ -2,7 +2,13 @@
   border: 1px solid #eaeaea;
   min-height: 400px;
   border-radius: 8px;
-  padding: 30px;
+  padding: 15px;
+  word-break: break-all;
+
+
+  @media(min-width: 640px) {
+    padding: 30px;
+  }
 
   &__title {
     font-size: 28px;
@@ -14,7 +20,6 @@
   &__card {
       display: grid;
       gap: 30px 20px;
-      cursor: pointer;
     
     @media(min-width: 640px) {
         grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -26,6 +31,7 @@
     
     .card {
         transition: all .3s ease-in-out;
+        cursor: pointer;
       &__image {
         min-height: 140px;
         display: flex;
@@ -37,6 +43,7 @@
         box-shadow: 0 26px 32px rgb(26 36 72 / 5%);
         border-bottom-left-radius: 8px;
         border-bottom-right-radius: 8px;
+        word-break: break-all;
 
         h3 {
           text-align: center;
